# cmake_test

./: readme.md
AppC/: CMakeLists.txt  myexe.cpp
LibA/: CMakeLists.txt
LibA/lib/: CMakeLists.txt
LibA/lib/include/: liba.h
LibA/lib/src/: liba.cpp
LibA/tests/: CMakeLists.txt  test_liba.cpp
LibB/: CMakeLists.txt
LibB/lib/: CMakeLists.txt
LibB/lib/include/: libb.h
LibB/lib/src/: libb.cpp
LibB/tests/: CMakeLists.txt  test_libb.cpp
